--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -1,6 +1,6 @@
 .cover__title {
     position: relative;
-    font-style: bold;
+    font-style: normal;
     font-weight: 900;
     font-size: 4.5rem;
     line-height: 106%;
