--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -2,7 +2,7 @@
     margin: 0 auto 92px;
     max-width: 984px;
     min-width: 720px;
-    width: calc(984px / 1280px * 100%);
+    width: 77%;
     padding: 0;
 }
 
@@ -10,7 +10,7 @@
     .places {
         min-width: 320px;
         margin: 0 auto 64px;
-        width: calc(928px / 1024px * 100%);
+        width: 93%;
     }
 }
 
@@ -18,6 +18,6 @@
     .places {
         min-width: 320px;
         margin: 0 auto 64px;
-        width: calc(720px / 768px * 100%);
+        width: 96%;
     }
 }
