--- a/blocks/cover/__overlay-link/cover__overlay-link.css
+++ b/blocks/cover/__overlay-link/cover__overlay-link.css
@@ -1,8 +1,9 @@
 .cover__overlay-link {
-    position: absolute;
+    position: relative;
     text-decoration: none;
     width: 100%;
-    height: 100%;
+    height: 0;
+    padding-bottom: 62.5%;
     z-index: 4;
 }
 
