--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -1,7 +1,4 @@
 .header__lang-link {
-    position: relative;
-    justify-content: flex-end;
-    align-self: flex-end;
     margin-left: 18px;
     font-weight: normal;
     font-size: 24px;
@@ -9,6 +6,7 @@
     text-align: right;
     color: #ffffff;
     transition: 0.3s;
+    text-decoration: none;
 }
 
 .header__lang-link:hover {
