--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,11 +1,11 @@
 .header {
-    position: relative;
     display: flex;
+    flex-direction: column;
     flex-direction: row;
+    justify-content: space-between;
     margin: 28px auto 0;
     width: 92.5%;
     height: 52px;
     padding: 0;
-    justify-content: flex-end;
     max-width: 1184px;
 }
