--- a/fonts/fonts.css
+++ b/fonts/fonts.css
@@ -1,30 +1,3 @@
-@font-face {
-    font-family: 'Inter';
-    font-style:  normal;
-    font-weight: 100;
-    font-display: swap;
-    src: url("Inter-Thin.woff2?v=3.19") format("woff2"),
-         url("Inter-Thin.woff?v=3.19") format("woff");
-  }
-
-  @font-face {
-    font-family: 'Inter';
-    font-style:  normal;
-    font-weight: 200;
-    font-display: swap;
-    src: url("Inter-ExtraLight.woff2?v=3.19") format("woff2"),
-         url("Inter-ExtraLight.woff?v=3.19") format("woff");
-  }
-  
-  @font-face {
-    font-family: 'Inter';
-    font-style:  normal;
-    font-weight: 300;
-    font-display: swap;
-    src: url("Inter-Light.woff2?v=3.19") format("woff2"),
-         url("Inter-Light.woff?v=3.19") format("woff");
-  }
-  
   @font-face {
     font-family: 'Inter';
     font-style:  normal;
@@ -42,4 +15,13 @@
     src: url("Inter-Black.woff2?v=3.19") format("woff2"),
          url("Inter-Black.woff?v=3.19") format("woff");
   }
+
+  @font-face {
+     font-family: 'Inter';
+     font-style:  normal;
+     font-weight: 700;
+     font-display: swap;
+     src: url("Inter-Bold.woff2?v=3.19") format("woff2"),
+          url("Inter-Bold.woff?v=3.19") format("woff");
+   } 
   
