--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -1,14 +1,13 @@
 .cover__subtitle {
     position: relative;
     font-style: normal;
-    font-weight: 300;
     font-size: 1.12rem;
     line-height: 122%;
     text-align: center;
     color: #ffffff;
-    margin: 0 auto 0;
+    margin: 0;
+    padding:0;
     max-width: 360px;
-    max-height: fit-content;
     z-index: 3;
 }
 
