--- a/blocks/cover/__overlay-block/cover__overlay-block.css
+++ b/blocks/cover/__overlay-block/cover__overlay-block.css
@@ -1,13 +1,46 @@
 .cover__overlay-block {
     display: flex;
     position: relative;
-    flex-direction: column;
     text-decoration: none;
     width: 100%;
-    max-height: 740px;
-    height: 0;
-    padding-bottom: 62.5%;
+    height:740px;
     background-image: url(../../../images/cover-trains.jpg);
     background-size: 100%;
     background-repeat: no-repeat;
+}
+
+@media screen and (max-width:1184px) {
+.cover__overlay-block {
+    max-height:640px;
+    }
+}
+
+@media screen and (max-width:1023px) {
+    .cover__overlay-block {
+        max-height:480px;
+        }
+    }
+
+@media screen and (max-width:767px) {
+    .cover__overlay-block {
+        max-height:360px;
+    }
+}
+
+@media screen and (max-width:576px) {
+    .cover__overlay-block {
+        max-height:300px;
+    }
+}
+
+@media screen and (max-width:480px) {
+    .cover__overlay-block {
+        max-height:200px;
+    }
+}
+
+@media screen and (max-width:320px) {
+    .cover__overlay-block {
+        min-height:200px;
+    }
 }
