--- a/blocks/cover/__overlay-link/cover__overlay-link.css
+++ b/blocks/cover/__overlay-link/cover__overlay-link.css
@@ -1,12 +1,12 @@
 .cover__overlay-link {
+    display: flex;
     position: relative;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
     text-decoration: none;
     width: 100%;
-    height: 0;
-    padding-bottom: 62.5%;
     z-index: 4;
 }
 
-.cover__overlay-link:hover + .cover__overlay {
-    opacity: 0.8;
-}
+
