--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -6,11 +6,7 @@
     line-height: 106%;
     text-align: center;
     color: #ffffff;
-    margin-bottom: 32px;
-    margin-top: 0;
-    margin-top: calc((68% - (152px + 66px + 32px)) / 2);
-    margin-left: auto;
-    margin-right: auto;
+    margin: 0 0 32px;
     max-width: 560px;
     z-index: 3;
 }
@@ -19,7 +15,6 @@
     .cover__title {
         width: 90%;
         font-size: 2rem;
-        margin-top: calc((68% - (70px + 16px + 38px)) / 2);
         margin-bottom: 16px;
         max-width: 288px;
     }
