--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -2,16 +2,28 @@
     display: flex;
     position: relative;
     flex-direction: column;
-    width: 75%;
     max-width: 984px;
     margin: 94px auto 85px;
     padding: 0;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 1024px) {
+    .intro {
+        min-width: 928px;
+    }
+}
+
+@media screen and (max-width: 950px) {
     .intro {
         min-width: 300px;
         margin: 64px auto 64px;
         width: 92.5%;
     }
 }
+
+@media screen and (max-width: 320px) {
+    .intro {
+        width: 288px;
+    }
+}   
+  
