--- a/blocks/lead/__caption/lead__caption.css
+++ b/blocks/lead/__caption/lead__caption.css
@@ -1,6 +1,5 @@
 .lead__caption {
     font-style: normal;
-    font-weight: 300;
     font-size: 10px;
     line-height: 140%;
     letter-spacing: 1.8px;
@@ -9,4 +8,10 @@
     padding: 0;
     margin: 8px 0 0;
     width: fit-content;
+}
+
+@media screen and (max-width: 768px) {
+    .lead__caption {
+        margin-left: 24px;
+    }
 }
