--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -3,15 +3,16 @@
     margin: 32px auto 55px;
     font-style: normal;
     font-weight: normal;
-    font-size: 1.8rem;
+    font-size: 1.875rem;
     line-height: 120%;
     text-align: center;
     color: #ffffff;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 730px) {
     .lead__subtitle {
         font-size: 1rem;
+        line-height: 125%;
         max-width: 288px;
         margin: 16px auto 40px;
     }
