--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -7,9 +7,15 @@
     padding: 0;
 }
 
+@media screen and (max-width: 1024px) {
+    .lead {
+        max-width: 928px;
+        min-width: 320px;
+    }
+}
+
 @media screen and (max-width: 768px) {
     .lead {
         max-width: 768px;
-        min-width: 320px;
     }
 }
