--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -3,7 +3,7 @@
     grid-template-columns: repeat(auto-fit, minmax(284px, 1fr));
     column-gap: 14px;
     row-gap: 14px;
-    margin: 0 auto 69px;
+    margin: 0 auto 51px;
     width: 92.5%;
     max-width: 1184px;
 }
@@ -22,6 +22,7 @@
 
 @media screen and (max-width: 320px) {
     .photo-grid {
-        margin-bottom: 64px;
+        margin-bottom: 54px;
+        width: 288px;
     }
 }
