--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -8,3 +8,9 @@
         justify-self: center;
     }
 }
+
+@media screen and (max-width: 320px) {
+    .place__paragraph {
+        width: 288px; 
+    }
+}
