--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -7,7 +7,7 @@
     margin: 0;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 800px) {
     .place__title {
         font-size: 2.6rem;
     }
@@ -15,7 +15,6 @@
 
 @media screen and (max-width: 425px) {
     .place__title {
-        font-size: 2.6rem;
         width: 92.5%;
         justify-self: center; 
     }
@@ -24,7 +23,6 @@
 @media screen and (max-width: 320px) {
     .place__title {
         font-size: 2rem;
-        width: 92.5%;
-        justify-self: center;
+        width: 288px;
     }
 }
