--- a/blocks/place/__website/place__website.css
+++ b/blocks/place/__website/place__website.css
@@ -13,3 +13,9 @@
         justify-self: center;
     }
 }
+
+@media screen and (max-width: 320px) {
+    .place__website {
+        width: 288px; 
+    }
+}
