--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -9,6 +9,12 @@
     max-width: 1184px;
 }
 
+@media screen and (max-width: 1024px) {
+    .footer {
+        max-width: 928px;
+    }
+}
+
 @media screen and (max-width: 425px) {
     .footer {
         margin-left: 16px;
