--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -8,3 +8,15 @@
     padding: 0;
     max-width: 1184px;
 }
+
+@media screen and (max-width:1024px) {
+    .header {
+        max-width: 928px;
+    }
+}
+
+@media screen and (max-width:320px) {
+    .header {
+        width: 288px;
+    }
+}
