--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -3,20 +3,21 @@
     grid-template-columns: repeat(auto-fit, minmax(284px, 1fr));
     column-gap: 14px;
     row-gap: 14px;
-    margin: 0 auto 51px;
+    margin: 0 auto 92px;
     width: 92.5%;
     max-width: 1184px;
 }
 
 @media screen and (max-width: 1024px) {
     .photo-grid {
-        margin-bottom: 92px;
+        max-width: 928px;
     }
 }
 
 @media screen and (max-width: 768px) {
     .photo-grid {
         margin-bottom: 88px;
+        max-width: 720px;
     }
 }
 
